<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shoplist"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_shoplist" />
        <item
            android:id="@+id/nav_orderhistory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_orderhistory" />
        <item
            android:id="@+id/nav_paymenthistory"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_paymenthistory" />
        <item
            android:id="@+id/nav_myproduct"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_myproduct" />
        <item
            android:id="@+id/nav_mysaleaman"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_mysalesman" />

        <item
            android:id="@+id/nav_service_area"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_service_area" />

    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_profile" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
