<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ViewModel"
            type="com.irg.crm_admin.viewModel.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AddShopActivity">

        <RelativeLayout
            android:id="@+id/llPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/llButton"
                android:layout_marginTop="@dimen/_5sdp">

                <LinearLayout style="@style/main_layout">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/app_logo" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextLabelStyle"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:hintTextAppearance="@style/TextHintSize">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etMobile"
                            style="@style/editTextStyle_2"
                            android:hint="@string/hint_enter_mobile_no"
                            android:inputType="number"
                            android:maxLength="10"
                            android:text="@={ViewModel.mobileNo}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextLabelStyle"
                        app:hintTextAppearance="@style/TextHintSize"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPassword"
                            style="@style/editTextStyle_2"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:text="@={ViewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_red_back"
                        android:onClick="@{(v) -> ViewModel.onClickLogin(v)}"
                        android:text="@string/logon"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:onClick="@{(v) -> ViewModel.onClickNoAcc(v)}"
                        android:text="@string/no_account"
                        android:textSize="@dimen/_13sdp" />


                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

</layout>